# cartesi-coprocessor-solver

./: .dockerignore  Cargo.toml  Dockerfile  config.sample.toml  deploy_config.dev.env  deploy_config.prod.env  deploy_config.test.env  docker-bake.hcl  docker-bake.override.hcl  entrypoint.sh  fly.dev.toml  fly.prod.toml  fly.test.toml  fly.toml  setup_environment.sh
.github/workflows/: depot-prod.yml  depot-test.yml  depot.yml  rustfmt.yml
src/: main.rs
src/outputs_merkle/: mod.rs
