[package]
name = "cartesi-coprocessor-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
eigen-types = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
eigen-services-blsaggregation = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
eigen-services-avsregistry = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
eigen-client-avsregistry = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
eigen-crypto-bls = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
eigen-logging = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
eigen-utils = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
eigen-services-operatorsinfo = { git = "https://github.com/dymchenkko/eigensdk-rs", rev = "0b727925b2b07e0a49d17ee90a0647e27380ab74"}
alloy-signer-local = { version = "0.5.3", features = ["mnemonic"]}
coins-bip39 = "0.12.0"
alloy-network = "0.5.3"
alloy = {version = "0.5.3", features = ["signers"]}
log = "0.4.22"
ethers = "2.0.14"
sha3 = "0.10.8"
merkle = "1.11.0"
hex = "0.4.3"
ring = "0.17.8"
tokio-util = "0.7.12"
alloy-primitives = "0.8.8"
alloy-provider = { version = "0.5.3", features = ["ws"]}
hyper = { version = "0.14", features = ["full"] }
alloy-contract = { version = "0.5.3", features = ["pubsub"]}
alloy-rpc-types-eth = "0.5.3"
futures-util = "0.3"
alloy-sol-types = "0.8.8"
serde_json = "1.0.107"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
sha2 = "0.10.8"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = "0.7.12"
bb8-postgres = "0.8.1"
bb8 = "0.8.6"
futures-channel = "0.3.31"
postgres-types = {version = "0.2.8", features = ["derive"] }