[package]
name = "cartesi-coprocessor-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
eigen-types = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
eigen-services-blsaggregation = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
eigen-services-avsregistry = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
eigen-client-avsregistry = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
eigen-crypto-bls = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
eigen-logging = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
eigen-utils = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
eigen-services-operatorsinfo = { git = "https://github.com/stskeeps/eigensdk-rs", rev = "e29f0eeef740c07371cb59043d3c2e971bc9cdb7"}
alloy-signer-local = { version = "0.5.3", features = ["mnemonic"]}
coins-bip39 = "0.12.0"
alloy-network = "0.5.3"
alloy = {version = "0.5.3", features = ["signers"]}
log = "0.4.22"
ethers = "2.0.14"
sha3 = "0.10.8"
merkle = "1.11.0"
hex = "0.4.3"
ring = "0.17.8"
tokio-util = "0.7.12"
alloy-primitives = "0.8.8"
alloy-provider = { version = "0.5.3", features = ["ws"]}
hyper = { version = "0.14", features = ["full"] }
alloy-contract = { version = "0.5.3", features = ["pubsub"]}
alloy-rpc-types-eth = "0.5.3"
futures-util = "0.3"
alloy-sol-types = "0.8.8"
serde_json = "1.0.107"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
sha2 = "0.10.8"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
tokio = { version = "1.41.0", features = ["full"] }
tokio-postgres = "0.7.12"
bb8-postgres = "0.8.1"
bb8 = "0.8.6"
futures-channel = "0.3.31"
postgres-types = {version = "0.2.8", features = ["derive"] }
rust-s3 = { version = "0.35.1", default-features = false, features = ["fail-on-err", "tags", "async-std-native-tls" ] }
uuid = { version = "1.12.0", features = ["v4"] }
urlencoding = "2.1.3"
